--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,28 @@
 #root {
-  max-width: 1280px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+.pokemon-container {
+  justify-content: center;
+  padding-top: 20px;
+  max-width: 700px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.pokemon {
+  border: 1px solid white;
+  min-width: 130px;
+  padding: 2px;
+  border-radius: 5px;
+}
+
+.pokemon:hover {
+  background-color: rgb(35, 59, 80);
 }
 
 .logo {
@@ -16,21 +36,6 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
 }
 
 .card {
